fixing the viewport bug for menua

--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       );
     </script>
   </head>
-  <body class="font-dana bg-gray-100 dark:bg-zinc-800">
+  <body class="font-dana bg-gray-100 dark:bg-zinc-800 ">
     <!--All App Icons -->
     <svg class="hidden">
       <symbol
@@ -731,7 +731,7 @@
       </div>
       <!-- Nav Menu -->
       <div
-        class="nav-menu fixed z-20 -right-64 top-0 bg-white dark:bg-zinc-700 w-64 px-4 pt-3 pb-12 transition-all h-screen overflow-y-auto"
+        class="nav-menu fixed z-20 -right-64 top-0 bg-white dark:bg-zinc-700 w-64 px-4 pt-3 pb-12 transition-all h-dvh overflow-y-auto"
       >
         <!-- Nav Menu Header -->
         <div class="flex justify-between items-center">
@@ -862,7 +862,7 @@
         </svg>
         <!-- Cart Menu-->
         <div
-          class="cart-menu flex flex-col fixed z-20 -left-64 top-0 bg-white dark:bg-zinc-700 w-64 px-3 pt-3 pb-5 transition-all h-screen
+          class="cart-menu flex flex-col fixed z-20 -left-64 top-0 bg-white dark:bg-zinc-700 w-64 px-3 pt-3 pb-5 transition-all h-dvh
            overflow-y-auto"
         >
           <!-- Cart Menu Header -->
