fixing the shift issue with images

--- a/public/index.html
+++ b/public/index.html
@@ -1108,12 +1108,14 @@
                   >۱۲٪</span
                 >
                 <!-- Product Image -->
-                <img
-                  class="w-32 mx-auto md:w-auto"
-                  src="./images/products/p1.png"
-                  alt=""
-                  loading="lazy"
-                />
+                <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p1.png"
+                    alt=""
+                    loading="lazy"
+                    />
+                </div>
               </div>
               <!-- Product Title -->
               <h3
@@ -1190,12 +1192,14 @@
                   >۱۲٪</span
                 >
                 <!-- Product Image -->
-                <img
-                  class="w-32 mx-auto md:w-auto"
-                  src="./images/products/p2.png"
-                  alt=""
-                  loading="lazy"
-                />
+                 <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p2.png"
+                    alt=""
+                    loading="lazy"
+                    />
+                </div>
               </div>
               <!-- Product Title -->
               <h3
@@ -1272,12 +1276,14 @@
                   >۱۲٪</span
                 >
                 <!-- Product Image -->
-                <img
-                  class="w-32 mx-auto md:w-auto"
-                  src="./images/products/p3.png"
-                  alt=""
-                  loading="lazy"
-                />
+               <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p3.png"
+                    alt=""
+                    loading="lazy"
+                    />
+                </div>
               </div>
               <!-- Product Title -->
               <h3
@@ -1354,12 +1360,14 @@
                   >۱۲٪</span
                 >
                 <!-- Product Image -->
-                <img
-                  class="w-32 mx-auto md:w-auto"
-                  src="./images/products/p4.png"
-                  alt=""
-                  loading="lazy"
-                />
+              <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p4.png"
+                    alt=""
+                    loading="lazy"
+                    />
+                </div>
               </div>
               <!-- Product Title -->
               <h3
@@ -1436,12 +1444,14 @@
                   >۱۲٪</span
                 >
                 <!-- Product Image -->
-                <img
-                  class="w-32 mx-auto md:w-auto"
-                  src="./images/products/p5.png"
-                  alt=""
-                  loading="lazy"
-                />
+               <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p5.png"
+                    alt=""
+                    loading="lazy"
+                    />
+                </div>
               </div>
               <!-- Product Title -->
               <h3
@@ -1518,12 +1528,14 @@
                   >۱۲٪</span
                 >
                 <!-- Product Image -->
-                <img
-                  class="w-32 mx-auto md:w-auto"
-                  src="./images/products/p6.png"
-                  alt=""
-                  loading="lazy"
-                />
+                <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p6.png"
+                    alt=""
+                    loading="lazy"
+                    />
+                </div>
               </div>
               <!-- Product Title -->
               <h3
@@ -1600,12 +1612,14 @@
                   >۱۲٪</span
                 >
                 <!-- Product Image -->
-                <img
-                  class="w-32 mx-auto md:w-auto"
-                  src="./images/products/p7.png"
-                  alt=""
-                  loading="lazy"
-                />
+               <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p7.png"
+                    alt=""
+                    loading="lazy"
+                    />
+                </div>
               </div>
               <!-- Product Title -->
               <h3
@@ -1682,11 +1696,14 @@
                   >۱۲٪</span
                 >
                 <!-- Product Image -->
-                <img
-                  class="w-32 mx-auto md:w-auto"
-                  src="./images/products/p8.png"
-                  alt=""
-                />
+              <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p8.png"
+                    alt=""
+                    loading="lazy"
+                    />
+                </div>
               </div>
               <!-- Product Title -->
               <h3
@@ -1874,12 +1891,14 @@
                       >۱۲٪</span
                     >
                     <!-- Product Image -->
-                    <img
-                      class="w-32 mx-auto md:w-auto"
-                      src="./images/products/p7.png"
-                      alt=""
-                      loading="lazy"
+                   <div class="w-32 mx-auto md:w-auto aspect-[1/1]">
+                   <img
+                    class="w-full h-full object-contain"
+                    src="./images/products/p8.png"
+                    alt=""
+                    loading="lazy"
                     />
+                </div>
                   </div>
                   <!-- Product Title -->
                   <h3
