adding the blog section

--- a/public/index.html
+++ b/public/index.html
@@ -1084,8 +1084,8 @@
           <!-- Products Section Header -->
           <div class="flex justify-between items-end">
             <div>
-              <h2 class="product-title">جدیدترین محصولات</h2>
-              <span class="product-subtitle">فراوری شده از دانه قهوه</span>
+              <h2 class="section-title">جدیدترین محصولات</h2>
+              <span class="section-subtitle">فراوری شده از دانه قهوه</span>
             </div>
             <div class="section-link">
               <span class="hidden md:inline-block">مشاهده همه محصولات</span>
@@ -1864,8 +1864,8 @@
           <!-- best-selling Header -->
           <div class="flex justify-between items-end">
             <div>
-              <h2 class="product-title">محصولات پر فروش</h2>
-              <span class="product-subtitle">پیشنهاد قهوه خورها...</span>
+              <h2 class="section-title">محصولات پر فروش</h2>
+              <span class="section-subtitle">پیشنهاد قهوه خورها...</span>
             </div>
             <!-- Swiper Btns -->
             <div class="flex gap-3 md:gap-[18px]">
@@ -2469,6 +2469,23 @@
             </div>
           </div>
         </div>
+      </section>
+      <section class="blog">
+        <div class="container">
+          <!-- Blog Header -->
+           <div class="flex justify-between items-end mb-5 md:mb-12">
+              <h2 class="section-title">مطالب خواندنی </h2>        
+            <div class="section-link">
+              <span class="hidden md:inline-block">مشاهده همه محصولات</span>
+              <span class="md:hidden">مشاهده همه</span>
+              <svg class="w-5 h-5"><use href="#chevron-left-mini"></use></svg>
+            </div>
+          </div>
+          <!-- Blogs -->
+           <div class="gird grid-cols-1 sm:gird-cols-2 lg:grid-cols-3 md:grid-cols-4 gap-x-5 mb-7 sm:mb-28">
+          
+            </div>
+           </div>
       </section>
     </main>
     <script type="text/javascript" src="./scripts/app.js"></script>
