adding one blog item

--- a/public/index.html
+++ b/public/index.html
@@ -2483,7 +2483,21 @@
           </div>
           <!-- Blogs -->
            <div class="gird grid-cols-1 sm:gird-cols-2 lg:grid-cols-3 md:grid-cols-4 gap-x-5 mb-7 sm:mb-28">
-          
+          <div class="w-[300px] p-2.5 -pb-0.5 rounded-2xl bg-white dark:bg-zinc-700 ">
+              <!-- Blog Image -->
+               <div class="w-[130px] h-[130px] sm:w-[280px] sm:h-auto rounded-2xl rounded-bl-4xl overflow-hidden ">
+                <img src="images/blogs/blog-1.png" class="w-full h-full object-cover" loading="lazy" alt="">
+               </div>
+               <!-- Blog Info -->
+               <div class="sm:mt-[15px] flex ">
+                <h3 class="w-[193px] max-h-[51px] text-zinc-700 dark:text-white line-clamp-2" >  طرز تهیه قهوه دمی با دستگاه اروپرس</h3>
+                <div class="bg-gray-100 dark:bg-white/10 h-[61px] w-[1px] mx-5"></div>
+                <div class="flex flex-col font-danaMedium sm:font-dana text-sm/7 sm:text-lg text-end text-teal-500 dark:text-emerald-600">
+                  <span class="text-2xl/[34px] font-danaSemiBold">۲۱</span>
+                  <span class="text-sm  -mt-2">مرداد</span>
+                  <span class="text-sm">۱۴۰۳</span>
+                </div>
+               </div>
             </div>
            </div>
       </section>
