--- a/public/index.html
+++ b/public/index.html
@@ -129,52 +129,41 @@
       <symbol
         id="logo-type"
         viewBox="0 0 100 40"
-        fill="none"
+        fill="currentColor"
         xmlns="http://www.w3.org/2000/svg"
       >
         <path
           d="M7.22937 0.610531C4.44214 1.47319 2.66845 3.11226 1.2326 6.17471C-1.55463 12.1271 0.514679 18.0795 6.13137 20.2361C8.49629 21.0988 14.7887 21.487 15.8867 20.7537C16.1401 20.5812 16.3934 18.9421 16.4779 16.8717C16.6468 12.5584 16.4779 12.3859 12.5504 12.5584C9.76321 12.6878 9.00306 13.3348 10.6923 14.1112C11.917 14.6719 12.4237 16.2247 12.0437 17.9069C11.7903 18.8559 11.5791 18.9853 10.6078 18.7265C7.35606 17.9069 6.13137 15.7934 6.13137 10.9625C6.08914 8.11571 6.30029 7.20991 7.10267 5.74338C9.00306 2.29272 5.28675 2.55152 53.2186 2.55152C83.9626 2.55152 96.1251 2.68092 96.5474 3.02599C97.1808 3.58672 97.3498 13.3348 96.7163 13.3348C96.5051 13.3348 94.9848 11.4801 93.3378 9.23717L90.3395 5.13951H87.8056C86.412 5.13951 85.2718 5.22578 85.2718 5.35518C85.2718 5.48458 85.5674 6.04531 85.9475 6.60604C86.4542 7.46871 86.5387 8.71957 86.412 13.4211C86.3275 16.5698 86.1164 19.5891 85.9475 20.1499C85.6096 21.0988 85.6518 21.1419 87.2144 21.0125L88.8614 20.8831L88.9881 16.4404C89.0303 14.025 89.2837 12.0408 89.4948 12.0408C89.6638 12.0408 91.0996 13.9818 92.6199 16.3541C95.4494 20.7969 96.1251 21.3145 98.6167 21.0125L99.8414 20.8831L99.9681 11.8683C100.095 1.68886 99.9681 1.2144 97.2231 0.437998C96.1673 0.136066 81.1754 -0.0364666 52.3318 0.00666618C17.4492 0.00666618 8.70744 0.136066 7.22937 0.610531Z"
-          fill="#FDBA74"
         />
         <path
           d="M24.0797 5.13955C22.1371 5.61401 19.3921 7.64127 18.3785 9.40973C17.8718 10.3587 17.5762 11.6958 17.5339 13.3349C17.4917 15.4052 17.7029 16.0522 18.7164 17.3894C20.2789 19.4598 21.9682 20.5381 24.8398 21.142C29.3585 22.0909 34.384 20.193 36.1577 16.8718C39.5784 10.5312 35.3553 4.57882 27.5426 4.75135C26.4446 4.79448 24.8821 4.96702 24.0797 5.13955ZM29.5697 7.85694C29.9498 8.15887 30.6677 9.06467 31.1745 9.8842C34.0461 14.7151 29.1896 21.2714 25.1355 18.0364C22.1371 15.6209 21.9259 11.0057 24.7132 8.37454C25.9801 7.16681 28.3872 6.95114 29.5697 7.85694Z"
-          fill="#FDBA74"
         />
         <path
           d="M52.9652 12.9466V21.1851L58.2441 21.0125C64.3253 20.7969 66.3524 20.0636 68.1683 17.3462C69.5197 15.2758 69.6463 11.2644 68.4217 9.19403C66.4368 5.87278 63.4807 4.75132 56.9771 4.70818H52.9652V12.9466ZM62.7205 8.7627C64.0297 10.0998 64.1564 10.488 64.1564 12.6447C64.1564 16.6561 62.7627 18.5108 59.7644 18.5108H58.2441V13.2054C58.2441 10.2724 58.3707 7.72751 58.5397 7.59811C59.2998 6.77858 61.3691 7.38244 62.7205 8.7627Z"
-          fill="#FDBA74"
         />
         <path
           d="M71.2508 12.3426C71.3353 16.5696 71.462 20.2791 71.5465 20.5379C71.6731 20.9692 73.2357 21.0986 77.4165 21.0986C82.8221 21.0986 83.1599 21.0555 83.7511 20.1497C84.6802 18.7694 84.638 17.4323 83.7089 17.9068C83.2866 18.1224 81.6396 18.295 79.9926 18.295H77.0364V16.1383V13.9817L79.0213 13.8523C80.4994 13.766 81.2173 13.4641 81.6818 12.7739C82.0197 12.2563 82.3153 11.6956 82.3153 11.5231C82.3153 11.3505 81.1328 11.178 79.697 11.0917L77.0364 10.9623L76.9098 9.40954C76.7408 7.20975 77.501 6.64902 80.0771 7.25288C81.8085 7.64108 82.1886 7.59795 82.6531 6.99408C82.9065 6.60588 83.1599 5.91575 83.1599 5.48442C83.1599 4.75116 82.6531 4.70802 77.1631 4.70802H71.1241L71.2508 12.3426Z"
-          fill="#FDBA74"
         />
         <path
           d="M39.1559 12.5583C39.2403 16.8284 39.4937 20.236 39.7471 20.5379C40.0427 20.9261 41.6052 21.0986 44.6881 21.0986C49.4602 21.0986 50.347 20.7967 50.7271 19.1145C50.9382 18.2087 50.8115 18.1656 47.9399 18.2518L44.9415 18.295V11.6956V5.13935H41.9853H39.0292L39.1559 12.5583Z"
-          fill="#FDBA74"
         />
         <path
           d="M4.31542 24.2908C2.11942 25.3691 0.683576 27.0513 0.134577 29.208C-0.287731 30.847 0.387961 34.7721 1.35927 36.2387C3.13296 38.9129 7.65165 40.25 13.0572 39.7756C15.5066 39.5168 15.6755 39.4736 16.2667 38.0071C16.6046 37.1876 16.7735 36.4112 16.689 36.2818C16.5623 36.1955 15.591 36.4112 14.493 36.7994C12.0436 37.6621 10.3966 37.6621 8.91857 36.8857C6.25803 35.4623 4.94888 32.788 5.54011 30.0275C6.46919 25.671 9.08749 24.5496 13.6062 26.4906C14.2819 26.7925 14.3663 26.62 14.2396 25.1534L14.1129 23.4712L10.3122 23.3418C7.01819 23.2556 6.2158 23.385 4.31542 24.2908Z"
-          fill="#FDBA74"
         />
         <path
           d="M24.9239 23.9024C20.363 25.1964 17.7447 28.7333 18.2515 33.0035C18.7583 37.6187 23.108 40.4224 29.2315 39.9479C35.735 39.5166 39.7047 33.823 37.382 28.302C35.7772 24.42 30.1183 22.4359 24.9239 23.9024ZM31.0896 27.353C32.5255 29.0352 33.0745 31.3644 32.5255 33.4779C31.0896 38.9559 25.2196 38.8265 23.5726 33.2192C22.0945 28.1726 27.8801 23.6436 31.0896 27.353Z"
-          fill="#FDBA74"
         />
         <path
           d="M40.0431 23.5574C40.0008 23.7731 40.0431 24.075 40.1275 24.3338C40.212 24.5495 40.3809 28.0432 40.5076 32.0978L40.7187 39.4304L43.4637 39.5598L46.251 39.6892L46.2087 36.1092V32.5291L48.4047 32.3997C50.6852 32.2703 51.7832 31.4939 51.3187 30.3724C51.1497 29.898 50.4318 29.7254 48.5314 29.7254H45.9976V27.8276C45.9976 25.4984 46.6311 25.1533 49.6294 25.8435C51.4454 26.2748 51.741 26.2317 52.2477 25.5415C52.5434 25.1102 52.7123 24.5063 52.67 24.1181C52.5434 23.6005 51.4876 23.4711 46.2932 23.3417C42.8725 23.2986 40.0431 23.3849 40.0431 23.5574Z"
-          fill="#FDBA74"
         />
         <path
           d="M55.2453 23.5574C55.2031 23.7731 55.2453 24.075 55.3298 24.3338C55.4143 24.5495 55.5832 28.0432 55.7099 32.0978L55.921 39.4304L58.666 39.5598L61.4532 39.6892L61.411 36.1092V32.5291L63.607 32.3997C65.8875 32.2703 66.9855 31.4939 66.5209 30.3724C66.352 29.898 65.6341 29.7254 63.7337 29.7254H61.1999V27.8276C61.1999 25.4984 61.8333 25.1533 64.8317 25.8435C66.6476 26.2748 66.9432 26.2317 67.45 25.5415C67.7456 25.1102 67.9145 24.5063 67.8723 24.1181C67.7456 23.6005 66.6899 23.4711 61.4955 23.3417C58.0748 23.2986 55.2453 23.3849 55.2453 23.5574Z"
-          fill="#FDBA74"
         />
         <path
           d="M70.4486 23.5576C70.4064 23.7732 70.4486 24.0752 70.4909 24.334C70.5753 24.5496 70.5753 27.8709 70.5753 31.6235C70.5331 36.0231 70.702 38.7404 70.9976 39.0855C71.3355 39.5168 72.9403 39.6462 77.0789 39.6462H82.7378L83.4557 38.1366C84.3426 36.2819 84.0469 35.9368 82.3155 36.8426C81.4709 37.2739 80.2462 37.4896 78.8103 37.4033L76.6143 37.2739L76.4876 34.7722L76.3609 32.3136H78.4303C80.584 32.3136 81.4709 31.796 81.4709 30.502C81.4709 29.855 81.0908 29.7256 78.8948 29.7256H76.3609L76.4876 27.6552C76.6143 25.4123 76.8677 25.2829 80.2884 25.973C81.6398 26.275 81.9354 26.1887 82.3155 25.4123C83.329 23.4713 82.78 23.2556 76.4032 23.2556C73.1514 23.2556 70.4486 23.385 70.4486 23.5576Z"
-          fill="#FDBA74"
         />
         <path
           d="M86.4542 30.4589C86.4964 34.4703 86.6654 38.1366 86.7498 38.6542C86.961 39.6462 87.0877 39.6462 92.9155 39.6462H98.8278L99.4613 38.1366C100.264 36.1093 100.264 36.1093 98.5322 36.8426C96.674 37.619 93.1267 37.7052 92.5777 36.9288C92.3665 36.6701 92.2398 35.7211 92.282 34.9016C92.3243 34.0821 92.4087 33.1331 92.4087 32.8312C92.451 32.4861 93.1689 32.3136 94.5203 32.3136C96.674 32.3136 97.8143 31.5372 97.392 30.4157C97.223 29.9844 96.3784 29.7256 94.6892 29.6393L92.2398 29.5099L92.1131 27.9571C91.9442 25.7142 92.7044 25.1966 95.4494 25.8005C97.392 26.2318 97.6876 26.1887 98.1944 25.5417C98.5322 25.1104 98.7434 24.4634 98.6589 24.1183C98.5744 23.6007 97.4764 23.4713 92.451 23.3419L86.3275 23.2125L86.4542 30.4589Z"
-          fill="#FDBA74"
         />
       </symbol>
       <symbol
@@ -185,11 +174,9 @@
       >
         <path
           d="M16.0569 0.00102901C15.8613 0.0126934 15.8027 0.0176935 15.674 0.0343571C15.4845 0.0585203 15.2824 0.0993471 15.1012 0.150173C15.022 0.172669 14.8408 0.233077 14.842 0.236826C14.8429 0.238493 14.8867 0.269738 14.94 0.305983C15.7966 0.89131 16.5075 1.62953 17.0643 2.51065C17.5801 3.32635 17.984 4.26329 18.353 5.50019C18.5023 6.00053 18.6191 6.43713 18.8655 7.41823C19.1456 8.53264 19.2612 8.96383 19.4277 9.51374C19.4834 9.69663 19.6007 10.0578 19.6548 10.2116C19.7635 10.5215 19.9078 10.8923 20.0128 11.1302L20.023 11.1531L20.0275 11.1364C20.03 11.1272 20.0439 11.0718 20.0587 11.0131C20.2415 10.2732 20.2645 9.49458 20.13 8.56389C20.0693 8.14145 19.9984 7.78817 19.8004 6.91414C19.6778 6.37339 19.6511 6.25216 19.5991 5.99345C19.4437 5.22565 19.376 4.60574 19.3863 4.04999C19.3879 3.96042 19.3904 3.87252 19.3916 3.85461L19.3945 3.82128L20.2961 6.97288C20.7918 8.70595 21.1981 10.1249 21.1989 10.1257C21.2002 10.127 25.9764 7.36574 25.9826 7.36032C25.9863 7.35657 25.8243 7.02621 25.7558 6.89748C24.6566 4.83487 22.6098 2.71936 20.4207 1.38332C19.294 0.695506 18.1833 0.249741 17.1681 0.0781002C16.9676 0.0439386 16.7859 0.0226927 16.5633 0.00644493C16.503 0.00227833 16.109 -0.00188732 16.0569 0.00102901Z"
-          fill="#FDBA74"
         />
         <path
           d="M12.3077 2.06948C11.9386 2.09322 11.5717 2.22154 11.2437 2.44192C10.7783 2.75479 10.3908 3.2593 10.1219 3.90336C10.0218 4.14291 9.89143 4.53618 9.80041 4.87488C9.59991 5.62018 9.46256 6.43839 9.35595 7.52448C9.31823 7.90692 9.29363 8.19979 9.23254 8.99509C9.17186 9.78621 9.13741 10.182 9.09682 10.5678C9.08575 10.6723 9.08124 10.7327 9.08247 10.7498C9.09108 10.839 9.15545 10.9469 9.2883 11.0948C9.3129 11.1223 9.40228 11.216 9.48675 11.3031C9.65198 11.473 9.72497 11.5522 9.79385 11.6338C9.81763 11.6626 9.84141 11.6905 9.84633 11.6963C9.85494 11.7063 9.85535 11.7068 9.85576 11.6988C9.85576 11.6938 9.97467 10.404 10.1202 8.83261C10.2658 7.26077 10.4081 5.72142 10.4368 5.4123C10.465 5.10276 10.4888 4.84947 10.4888 4.84947C10.4892 4.84905 10.5639 4.86072 10.6553 4.8753C10.7467 4.88988 10.8218 4.90196 10.8222 4.90196C10.823 4.90196 10.8238 6.35632 10.8242 8.13355L10.8254 11.3656L11.8136 11.6247C16.4259 12.8357 17.6592 13.1594 17.6604 13.1582C17.6608 13.1574 17.6403 13.052 17.6153 12.9237C17.5899 12.7953 17.5366 12.5133 17.4964 12.2967C17.334 11.4147 17.2844 11.161 17.2008 10.7931C17.1262 10.4649 17.0716 10.2557 16.9654 9.89495C16.8441 9.48168 16.7846 9.27129 16.5124 8.28478C16.1151 6.84541 15.8797 6.09178 15.5857 5.32065C15.343 4.68283 15.0347 4.01876 14.8055 3.63965C14.5714 3.25263 14.2848 2.9131 13.9797 2.66189C13.4664 2.23903 12.8845 2.03282 12.3077 2.06948Z"
-          fill="#FDBA74"
         />
         <path
           d="M32.5251 8.19719C31.3365 8.23593 30.0941 8.43799 28.8083 8.80126C26.1625 9.54907 23.6544 10.8889 21.9081 12.4878C21.7072 12.6715 21.3747 13.0035 21.2156 13.1789C20.7806 13.6584 20.4489 14.1021 20.1619 14.5879C20.1447 14.6166 20.1315 14.6404 20.1324 14.6412C20.1328 14.642 20.1574 14.6404 20.1861 14.6379C20.6736 14.5954 21.1357 14.4437 21.6802 14.1471C22.1849 13.8726 22.8778 13.4789 24.007 12.8244C24.9312 12.2891 25.2276 12.1183 25.604 11.9041C27.2474 10.9693 28.468 10.3423 29.6283 9.83652C30.4352 9.48491 31.1897 9.30285 32.0556 9.25119C32.2619 9.2387 32.6329 9.24161 32.8675 9.25786C33.7814 9.31993 34.6846 9.56073 35.5777 9.98025C35.6273 10.0036 35.6691 10.024 35.6707 10.0252C35.6724 10.0269 35.51 10.0273 35.3099 10.0269C34.1139 10.0223 33.006 10.0886 31.8793 10.2327C28.32 10.6872 25.2699 11.8904 23.1562 13.673C22.8934 13.8947 22.7015 14.0717 22.46 14.315C22.23 14.5462 22.0627 14.7295 21.8667 14.9649C21.772 15.0786 21.5428 15.3728 21.5145 15.4173L21.508 15.4282L21.5559 15.4652C21.6322 15.5236 21.804 15.6644 21.9139 15.7581C22.2079 16.0081 22.4506 16.2301 23.0312 16.7792C23.7553 17.4641 24.0595 17.7366 24.4314 18.0336C25.2166 18.6606 25.8808 18.9864 26.5163 19.0555C26.6738 19.0726 26.9517 19.0751 27.1149 19.0605C27.807 18.9985 28.5561 18.7468 29.493 18.2627C29.8784 18.0636 30.2462 17.8557 30.8666 17.4874C31.0043 17.4058 31.2208 17.2771 31.3483 17.2012C31.915 16.8646 32.1491 16.7317 32.6173 16.4813C33.9782 15.7531 34.7117 15.3165 35.4046 14.822C35.8897 14.4754 36.2673 14.1638 36.6535 13.7905C37.1952 13.2668 37.5498 12.7352 37.7364 12.1674C37.8073 11.952 37.845 11.775 37.8676 11.5467C37.875 11.4759 37.8774 11.2576 37.8721 11.178C37.85 10.851 37.7725 10.5589 37.6298 10.2656C37.4527 9.9011 37.1915 9.57906 36.8426 9.29494C36.1808 8.75585 35.2689 8.41424 34.0967 8.26635C33.856 8.23593 33.6215 8.21635 33.3062 8.20094C33.1926 8.19552 32.6579 8.19302 32.5251 8.19719Z"
@@ -737,7 +724,7 @@
         <div class="flex justify-between items-center">
           <div class="flex gap-x-3.5">
             <svg class="h-10 w-[41px]"><use href="#logo"></use></svg>
-            <svg class="h-10 w-[100px]"><use href="#logo-type"></use></svg>
+            <svg class="h-10 w-[100px] text-orange-300"><use href="#logo-type"></use></svg>
           </div>
           <!-- Nav Close Btn -->
           <div class="nav-close-btn cursor-pointer">
@@ -852,7 +839,7 @@
         </ul>
       </div>
       <!-- Logo type -->
-      <svg class="w-[100px] h-10">
+      <svg class="w-[100px] h-10 text-orange-300">
         <use href="#logo-type"></use>
       </svg>
       <!--  Cart Icon -->
@@ -2482,15 +2469,79 @@
             </div>
           </div>
           <!-- Blogs -->
-           <div class="gird grid-cols-1 sm:gird-cols-2 lg:grid-cols-3 md:grid-cols-4 gap-x-5 mb-7 sm:mb-28">
-          <div class="w-[300px] p-2.5 -pb-0.5 rounded-2xl bg-white dark:bg-zinc-700 ">
-              <!-- Blog Image -->
-               <div class="w-[130px] h-[130px] sm:w-[280px] sm:h-auto rounded-2xl rounded-bl-4xl overflow-hidden ">
-                <img src="images/blogs/blog-1.png" class="w-full h-full object-cover" loading="lazy" alt="">
+           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 mb-7 sm:mb-28 justify-items-center ">
+            <div class="group w-[300px] p-2.5 -pb-0.5 rounded-2xl bg-white dark:bg-zinc-700">
+            <!-- Blog Image -->
+            <div class="relative w-[130px] h-[130px] sm:w-[280px] sm:h-auto rounded-2xl rounded-bl-4xl overflow-hidden ">
+                <img src="images/blogs/blog-2.png" class="w-full h-full object-cover" loading="lazy" alt="">
+                <!-- Blog Image Hover -->
+                <div class="absolute inset-0 z-20 opacity-0 invisible group-hover:opacity-100 group-hover:visible flex-center w-full h-full bg-gradient-to-r from-orange-200/80 to-orange-300/80 transition-all delay-100">
+                  <svg class="w-[138px] text-amber-900"><use href="#logo-type"></use></svg>
+                </div>
                </div>
                <!-- Blog Info -->
                <div class="sm:mt-[15px] flex ">
-                <h3 class="w-[193px] max-h-[51px] text-zinc-700 dark:text-white line-clamp-2" >  طرز تهیه قهوه دمی با دستگاه اروپرس</h3>
+                <a class="w-[193px] max-h-[51px] text-zinc-700 dark:text-white line-clamp-2 cursor-pointer" >  طرز تهیه قهوه دمی با دستگاه اروپرس</a>
+                <div class="bg-gray-100 dark:bg-white/10 h-[61px] w-[1px] mx-5"></div>
+                <div class="flex flex-col font-danaMedium sm:font-dana text-sm/7 sm:text-lg text-end text-teal-500 dark:text-emerald-600">
+                  <span class="text-2xl/[34px] font-danaSemiBold">۲۱</span>
+                  <span class="text-sm  -mt-2">مرداد</span>
+                  <span class="text-sm">۱۴۰۳</span>
+                </div>
+               </div>
+            </div>
+            <div class="group w-[300px] p-2.5 -pb-0.5 rounded-2xl bg-white dark:bg-zinc-700 ">
+            <!-- Blog Image -->
+            <div class="relative w-[130px] h-[130px] sm:w-[280px] sm:h-auto rounded-2xl rounded-bl-4xl overflow-hidden ">
+                <img src="images/blogs/blog-3.png" class="w-full h-full object-cover" loading="lazy" alt="">
+                <!-- Blog Image Hover -->
+                <div class="absolute inset-0 z-20 opacity-0 invisible group-hover:opacity-100 group-hover:visible flex-center w-full h-full bg-gradient-to-r from-orange-200/80 to-orange-300/80 transition-all delay-100">
+                  <svg class="w-[138px] text-amber-900"><use href="#logo-type"></use></svg>
+                </div>
+               </div>
+               <!-- Blog Info -->
+               <div class="sm:mt-[15px] flex ">
+                <a class="w-[193px] max-h-[51px] text-zinc-700 dark:text-white line-clamp-2 cursor-pointer" >  طرز تهیه قهوه دمی با دستگاه اروپرس</a>
+                <div class="bg-gray-100 dark:bg-white/10 h-[61px] w-[1px] mx-5"></div>
+                <div class="flex flex-col font-danaMedium sm:font-dana text-sm/7 sm:text-lg text-end text-teal-500 dark:text-emerald-600">
+                  <span class="text-2xl/[34px] font-danaSemiBold">۲۱</span>
+                  <span class="text-sm  -mt-2">مرداد</span>
+                  <span class="text-sm">۱۴۰۳</span>
+                </div>
+               </div>
+            </div>
+            <div class="group w-[300px] p-2.5 -pb-0.5 rounded-2xl bg-white dark:bg-zinc-700 ">
+            <!-- Blog Image -->
+            <div class="relative w-[130px] h-[130px] sm:w-[280px] sm:h-auto rounded-2xl rounded-bl-4xl overflow-hidden ">
+                <img src="images/blogs/blog-4.png" class="w-full h-full object-cover" loading="lazy" alt="">
+                <!-- Blog Image Hover -->
+                <div class="absolute inset-0 z-20 opacity-0 invisible group-hover:opacity-100 group-hover:visible flex-center w-full h-full bg-gradient-to-r from-orange-200/80 to-orange-300/80 transition-all delay-100">
+                  <svg class="w-[138px] text-amber-900"><use href="#logo-type"></use></svg>
+                </div>
+               </div>
+               <!-- Blog Info -->
+               <div class="sm:mt-[15px] flex ">
+                <a class="w-[193px] max-h-[51px] text-zinc-700 dark:text-white line-clamp-2 cursor-pointer" >  طرز تهیه قهوه دمی با دستگاه اروپرس</a>
+                <div class="bg-gray-100 dark:bg-white/10 h-[61px] w-[1px] mx-5"></div>
+                <div class="flex flex-col font-danaMedium sm:font-dana text-sm/7 sm:text-lg text-end text-teal-500 dark:text-emerald-600">
+                  <span class="text-2xl/[34px] font-danaSemiBold">۲۱</span>
+                  <span class="text-sm  -mt-2">مرداد</span>
+                  <span class="text-sm">۱۴۰۳</span>
+                </div>
+               </div>
+            </div>
+            <div class="group w-[300px] p-2.5 -pb-0.5 rounded-2xl bg-white dark:bg-zinc-700 ">
+            <!-- Blog Image -->
+            <div class="relative w-[130px] h-[130px] sm:w-[280px] sm:h-auto rounded-2xl rounded-bl-4xl overflow-hidden ">
+                <img src="images/blogs/blog-1.png" class="w-full h-full object-cover" loading="lazy" alt="">
+                <!-- Blog Image Hover -->
+                <div class="absolute inset-0 z-20 opacity-0 invisible group-hover:opacity-100 group-hover:visible flex-center w-full h-full bg-gradient-to-r from-orange-200/80 to-orange-300/80 transition-all delay-100">
+                  <svg class="w-[138px] text-amber-900"><use href="#logo-type"></use></svg>
+                </div>
+               </div>
+               <!-- Blog Info -->
+               <div class="sm:mt-[15px] flex ">
+                <a class="w-[193px] max-h-[51px] text-zinc-700 dark:text-white line-clamp-2 cursor-pointer" >  طرز تهیه قهوه دمی با دستگاه اروپرس</a>
                 <div class="bg-gray-100 dark:bg-white/10 h-[61px] w-[1px] mx-5"></div>
                 <div class="flex flex-col font-danaMedium sm:font-dana text-sm/7 sm:text-lg text-end text-teal-500 dark:text-emerald-600">
                   <span class="text-2xl/[34px] font-danaSemiBold">۲۱</span>
