--- a/public/index.html
+++ b/public/index.html
@@ -208,17 +208,9 @@
         />
       </symbol>
       <symbol id="phone"
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-      >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M14.25 9.75v-4.5m0 4.5h4.5m-4.5 0 6-6m-3 18c-8.284 0-15-6.716-15-15V4.5A2.25 2.25 0 0 1 4.5 2.25h1.372c.516 0 .966.351 1.091.852l1.106 4.423c.11.44-.054.902-.417 1.173l-1.293.97a1.062 1.062 0 0 0-.38 1.21 12.035 12.035 0 0 0 7.143 7.143c.441.162.928-.004 1.21-.38l.97-1.293a1.125 1.125 0 0 1 1.173-.417l4.423 1.106c.5.125.852.575.852 1.091V19.5a2.25 2.25 0 0 1-2.25 2.25h-2.25Z"
-        />
+       xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
+      </symbol>
       </symbol>
       <symbol id="shopping-bag"
         xmlns="http://www.w3.org/2000/svg"
@@ -339,8 +331,11 @@
       <symbol id="arrow-left-mini"
        xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" class="size-5">
       <path fill-rule="evenodd" d="M17 10a.75.75 0 0 1-.75.75H5.612l4.158 3.96a.75.75 0 1 1-1.04 1.08l-5.5-5.25a.75.75 0 0 1 0-1.08l5.5-5.25a.75.75 0 1 1 1.04 1.08L5.612 9.25H16.25A.75.75 0 0 1 17 10Z" clip-rule="evenodd" />
-</symbol>
-
+      </symbol> 
+      <symbol id="ellipsis-horizantal"
+       xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
+  <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0ZM12.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0ZM18.75 12a.75.75 0 1 1-1.5 0 .75.75 0 0 1 1.5 0Z" />
+      </symbol>
     </svg>
     <!--App  Header -->
     <header
@@ -2554,6 +2549,28 @@
             </div>
             </div>
            </div>
+      </section>
+      <section class="contact-us mb-[76px] sm:mb-28">
+        <div class="container">
+         <div class="flex flex-col items-center md:flex-row  gap-x-5 gap-y-8 text-zinc-700 dark:text-white">
+           <!-- Contact-us Image -->
+           <div class="w-[296px] mx-auto md:mx-0 shrink-0" >
+            <img src="images/contact.png" class="w-full h-full " loading="lazy" alt="">
+           </div>
+           <div class="space-y-4">
+             <!-- Contact-us Titles -->
+              <div>
+                <h3 class="section-title">یکی از بهترین قهوه ها!</h3>
+                <span class="section-subtitle"> کیفیت قهوه را از ما بخواهید...</span>
+                <svg class="w-11 text-zinc-700 dark:text-white -my-16"><use href="#ellipsis-horizantal"></use></svg>
+              </div>
+              <p class="text-lg sm:text-xl md:text-2xl">فضای گرم و دنج ما را احساس کنید، جایی که همه می توانند قهوه معطری پیدا کنند و دسرهای خوشمزه ما را که کاملاً با قهوه داغ همراه شده است، امتحان کنند. فضای داخلی شیک و کارکنان خوش برخورد ما روز شما را می سازد!</p>
+              <a href="#" class="inline-flex gap-x-2 items-center px-6 py-[15px] text-base sm:text-xl text-orange-300 border border-orange-300 rounded-full cursor-pointer">
+               <svg class="w-[22px] h-[22px] md:w-8 md:h-8"><use href="#phone"></use></svg> ثبت سفارش تلفنی 
+              </a>
+           </div>
+         </div>
+        </div>
       </section>
     </main>
     <script type="text/javascript" src="./scripts/app.js"></script>
