adding the dark icons for services section

--- a/public/index.html
+++ b/public/index.html
@@ -2572,6 +2572,11 @@
          </div>
         </div>
       </section>
+      <section class="services">
+        <div class="container">
+          <div class=""></div>
+        </div>
+      </section>
     </main>
     <script type="text/javascript" src="./scripts/app.js"></script>
     <script src="scripts/swiper-bundle.min.js"></script>
