--- a/public/index.html
+++ b/public/index.html
@@ -211,7 +211,6 @@
        xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
   <path stroke-linecap="round" stroke-linejoin="round" d="M2.25 6.75c0 8.284 6.716 15 15 15h2.25a2.25 2.25 0 0 0 2.25-2.25v-1.372c0-.516-.351-.966-.852-1.091l-4.423-1.106c-.44-.11-.902.055-1.173.417l-.97 1.293c-.282.376-.769.542-1.21.38a12.035 12.035 0 0 1-7.143-7.143c-.162-.441.004-.928.38-1.21l1.293-.97c.363-.271.527-.734.417-1.173L6.963 3.102a1.125 1.125 0 0 0-1.091-.852H4.5A2.25 2.25 0 0 0 2.25 4.5v2.25Z" />
       </symbol>
-      </symbol>
       <symbol id="shopping-bag"
         xmlns="http://www.w3.org/2000/svg"
         fill="none"
@@ -265,12 +264,16 @@
           d="M20.25 14.15v4.25c0 1.094-.787 2.036-1.872 2.18-2.087.277-4.216.42-6.378.42s-4.291-.143-6.378-.42c-1.085-.144-1.872-1.086-1.872-2.18v-4.25m16.5 0a2.18 2.18 0 0 0 .75-1.661V8.706c0-1.081-.768-2.015-1.837-2.175a48.114 48.114 0 0 0-3.413-.387m4.5 8.006c-.194.165-.42.295-.673.38A23.978 23.978 0 0 1 12 15.75c-2.648 0-5.195-.429-7.577-1.22a2.016 2.016 0 0 1-.673-.38m0 0A2.18 2.18 0 0 1 3 12.489V8.706c0-1.081.768-2.015 1.837-2.175a48.111 48.111 0 0 1 3.413-.387m7.5 0V5.25A2.25 2.25 0 0 0 13.5 3h-3a2.25 2.25 0 0 0-2.25 2.25v.894m7.5 0a48.667 48.667 0 0 0-7.5 0M12 12.75h.008v.008H12v-.008Z"
         />
       </symbol>
-      <symbol id="curve"
+      <symbol id="curve-header"
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 100 22"
         fill="currentColor"
       >
         <path d="M50 0C69 0 81 22 100 22L0 22C18.75 22 31 0 50 0Z" />
+      </symbol>
+      <symbol id="curve-footer"
+       width="100" height="22" viewBox="0 0 100 22" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+      <path d="M50 22C31 22 19 -3.26655e-06 1.9233e-06 -3.02023e-06L100 -3.8147e-06C81.25 -5.45387e-06 69 22 50 22Z"/>
       </symbol>
       <symbol id="arrows-left-right"
         xmlns="http://www.w3.org/2000/svg"
@@ -1032,7 +1035,7 @@
         <svg
           class="hidden md:block absolute bottom-0 left-0 right-0 mx-auto text-gray-100 dark:text-zinc-800 w-[100px] h-[22px]"
         >
-          <use href="#curve"></use>
+          <use href="#curve-header"></use>
         </svg>
         <!-- Circle Arrow -->
         <div
@@ -2715,6 +2718,30 @@
         </div>
       </section>
     </main>
+    <!-- App Footer -->
+     <footer class="relative min-h-96 bg-zinc-700 px-24 pt-16 pb-11">
+      <div class="border h-full">
+
+      </div>
+
+
+        <!-- Curve svg -->
+        <svg
+          class="hidden md:block absolute top-0 left-0 right-0 mx-auto text-gray-100 dark:text-zinc-800 w-[100px] h-[22px]"
+        >
+          <use href="#curve-footer"></use>
+        </svg>
+        <!-- Circle Arrow -->
+        <div
+          class="absolute left-0 top-0 right-0 mx-auto w-[30px] h-[30px] hidden md:flex justify-center items-center -translate-y-1/2 rounded-full border-2 border-orange-300"
+        >
+          <svg class="w-5 h-5 text-zinc-700 dark:text-white rotate-90">
+            <use href="#chevron-left-mini"></use>
+          </svg>
+        </div>
+     </footer>
+
+
     <script type="text/javascript" src="./scripts/app.js"></script>
     <script src="scripts/swiper-bundle.min.js"></script>
     <script>
